Other half of the project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>News Homepage</title>
   </head>
+  <style>
+    @font-face {
+      font-family: "Inter-Regular";
+      src: url("assets/fonts/static/Inter-Regular.tff") format("truetype");
+    }
+    @font-face {
+      font-family: "Inter-ExtraBold";
+      src: url("assets/fonts/static/Inter-ExtraBold.tff") format("truetype");
+    }
+    @font-face {
+      font-family: "Inter-Bold";
+      src: url("assets/fonts/static/Inter-Bold.tff") format("truetype");
+    }
+    @font-face {
+      font-family: "Inter-VariableFont";
+      src: url("assets/font/Inter-VariableFont_slnt,wght.ttf")
+        format("truetype");
+    }
+  </style>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
